# meshRW

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  test_msh.py
.github/worflows/: CI-pytest.yml
.github/workflows/: CI-docs.yml  CI-publish.yml  CI-pytest.yml
docs/: api-overview.md  conf.py  development.md  format-support.md  getting-started.md  index.md
meshRW/: __init__.py  configMESH.py  customLogging.py  dbmsh.py  dbvtk.py  fileio.py  msh.py  msh2.py  test.py  test_all.py  various.py  vtk.py  vtk2.py  writerClass.py
meshRW/tests/: test_all.py  test_dbvtk.py  test_fileio.py  test_msh.py  test_various.py  test_vtk.py
meshRW/tests/test_data/: debug.h5  mesh2Dref.msh
test_data/: debug.h5
