[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshRW"
dynamic = ['version']
authors = [{ name = "L. Laurent", email = "luc.laurent@lecnam.net" }]
description = "meshRW is a Python module that proposes basic readers and writers for msh (gmsh) and vtk (Paraview)."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ['numpy', 
'vtk', 
'gmsh', 
'pytest', 
'pytest-cov',
'loguru', 
'lxml']
requires-python = '>=3.8'

[project.optional-dependencies]
docs = [
    "sphinx>=7.4",
    "furo>=2024.8.6",
    "myst-parser>=3.0",
]
dev = [
    "ruff>=0.8",
]


[project.urls]
Homepage = "https://github.com/luclaurent/meshRW"
Repository = "https://github.com/luclaurent/meshRW"
Issues = "https://github.com/luclaurent/meshRW/issues"


[tool.hatch.version]
path = "meshRW/__init__.py"

[tool.hatch.build]
packages = ["meshRW"]
# only-packages = true
ignore-vcs = false

[tool.hatch.envs.hatch-test]
default-args = ["meshRW/tests/"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -W --keep-going -b html docs docs/_build/html"


[tool.coverage.run]
branch = true
# command_line = "-m unittest discover -s meshRW/tests/"

[tool.coverage.html]
show_contexts = true
directory = "reportcov"

[tool.coverage.xml]
output = "reportcov/report.xml"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
# select = []
ignore = ["N806", "N802", "N999", "N812", "N801",
"FA100", "RUF013"]

# # Allow fix for all enabled rules (when `--fix`) is provided.
# fixable = ["ALL"]
# unfixable = []

[tool.ruff.format]
quote-style = "single"

[tool.pylint.main]
py-version = "3.12"
jobs = 0
ignore-paths = [
    "^docs/_build/.*$",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-few-public-methods",
    "duplicate-code",
    "fixme",
]

[tool.pylint.design]
max-args = 12
max-locals = 35
max-branches = 20
max-statements = 80

[tool.pylint.logging]
logging-modules = ["logging", "loguru"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
